<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Safe Passwords</string>
    <string name="pin_field_hint">PIN</string>
    <string name="verify_button_text">Verify</string>
    <string name="reset_button_text">Reset</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="add_password">Add new Password</string>
    <string name="title_activity_new_password">New Password</string>
    <string name="password_name">Name</string>
    <string name="password_description">Description</string>
    <string name="password_password">Password</string>
    <string name="password_save">Save Password</string>
    <string name="cancel_action">Cancel</string>
    <string name="save_action">Save</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_placeholder">TESTE TITULO</string>

    <string name="password_detail_transition_name">passwordDetailTransitionName</string>
    <string name="password_detail_toolbar_transition_name">passwordDetailToolbarTransitionName</string>
    <string name="password_detail_title_transition_name">passwordTitleTransitionName</string>
    <string name="password_image_transition">passwordCatImageTransition</string>

</resources>
