<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.manoel.amaro.safepasswords.mobile.activity.DetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/password_detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_size_x2"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:transitionName="@string/password_detail_toolbar_transition_name" />

    <android.support.v7.widget.CardView
        android:id="@+id/password_detail_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/action_bar_size"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:transitionName="@string/password_detail_transition_name"
        card_view:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:id="@+id/password_detail_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="15dp"
                android:transitionName="@string/password_image_transition" />

            <TextView
                android:id="@+id/password_detail_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="15dp"
                android:text="@string/title_placeholder"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:transitionName="@string/password_detail_title_transition_name" />

        </LinearLayout>


    </android.support.v7.widget.CardView>
</RelativeLayout>
